[tool.poetry]
name = "atm-location-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atm_location_assessment"}]

[tool.poetry.dependencies]
python = "~3.9"
geopandas = "^0.13.2"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"
folium = "^0.14.0"
mapclassify = "^2.5.0"
pyrosm = "^0.6.1"
numpy = "<1.24"
shapely = "1.8.5"
seaborn = "^0.12.2"
minio = "^7.1.15"
python-dotenv = "^1.0.0"
black = "^23.3.0"
h3pandas = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
